# code-graph-mcp

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml  routing-bench.yml
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/scripts/: adopt.js  adopt.test.js  auto-update.js  claude-config.js  claude-config.test.js  doctor.js  find-binary.js  find-binary.test.js  hooks.test.js  incremental-index.js  incremental-index.test.js  lifecycle.e2e.test.js  lifecycle.js  lifecycle.test.js  mcp-launcher.js  mcp-launcher.test.js  pre-edit-guide.js  pre-grep-guide.js  pre-grep-guide.test.js  pre-read-guide.js  pre-read-guide.test.js  session-init.js  tmp-dir.js  tmp-dir.test.js  user-prompt-context.js  user-prompt-context.test.js
claude-plugin/templates/: code-graph-snapshot.yml  plugin_code_graph_mcp.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: sync-versions.js  sync-versions.test.js
src/: cli.rs  domain.rs  lib.rs  main.rs
src/graph/: query.rs
src/indexer/: merkle.rs  pipeline.rs
src/indexer/pipeline/: context.rs  embed.rs  index_files.rs  mod.rs  python_modules.rs  resolve.rs  tests.rs
src/mcp/: tools.rs
src/mcp/server/: mod.rs  tools.rs
src/mcp/server/tools/: advanced.rs  ast_node.rs  ast_search.rs  callgraph.rs  management.rs  overview.rs  project_map.rs  refs.rs  search.rs
src/parser/: lang_config.rs  languages.rs  relations.rs  treesitter.rs
src/parser/relations/: dart.rs  exports.rs  helpers.rs  imports.rs  inherits.rs  mod.rs  routes.rs  rust.rs  tests.rs
src/sandbox/: compressor.rs
src/snapshot/: config.rs  install.rs  meta.rs  mod.rs  tests.rs
src/storage/: db.rs  queries.rs  schema.rs
src/storage/queries/: dead_code.rs  edges.rs  files.rs  helpers.rs  imports.rs  mod.rs  nodes.rs  project_map.rs  routes.rs  search.rs  vectors.rs
src/utils/: config.rs
tests/: cli_e2e.rs  cli_snapshot.rs  effectiveness_bench.rs  integration.rs  integration_call_qualifier.rs  mcp_stdio_integration.rs  routing_bench.rs  snapshot_bench.rs  snapshot_integration.rs
