[package]
name = "code-graph-mcp"
version = "0.25.1"
edition = "2021"

[features]
# v0.18.4: default flipped to [] for direct `cargo install` users — gives a
# small (~10 MB) FTS5-only binary without the ~120 MB candle/tokenizers stack.
# Opt in to embedding via `cargo install code-graph-mcp --features embed-model`.
# npm releases still ship with embed-model (release.yml builds with the flag),
# so npm/npx/plugin users see no behavior change. Embedding model files are
# downloaded lazily on first semantic_code_search invocation (load() returns
# Ok(None) gracefully when files missing — search degrades to FTS5-only).
default = []
embed-model = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers",
               "dep:tokenizers", "dep:ureq", "dep:flate2", "dep:tar", "dep:dirs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled-full"] }
libsqlite3-sys = { version = "0.36", features = ["bundled"] }  # direct dep needed for DEP_SQLITE3_INCLUDE in build.rs
blake3 = "1"
ignore = "0.4"
rayon = "1"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "0.8"
zstd = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
libc = "0.2"
bytemuck = "1"
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"], optional = true }
ureq = { version = "3", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
dirs = { version = "6", optional = true }
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.23.11"
tree-sitter-swift = "0.6.0"
tree-sitter-dart-orchard = "0.3.2"
tree-sitter-md = "0.3"
tree-sitter-bash = "0.23.3"
tree-sitter-json = "0.24.8"
tempfile = "3"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indexing"
harness = false
